<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="20dp"
    tools:context=".view.detail.DetailActivity">

  <androidx.appcompat.widget.AppCompatImageView
      android:id="@+id/photo_story"
      android:layout_width="0dp"
      android:layout_height="250dp"
      android:scaleType="centerCrop"
      android:transitionName="photo"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      tools:src="@tools:sample/backgrounds/scenic" />

  <TextView
      android:id="@+id/tv_name"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      android:textAppearance="@style/TextAppearance.AppCompat.Headline"
      android:textStyle="bold"
      android:transitionName="name"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/photo_story"
      tools:text="@string/name" />

  <TextView
      android:id="@+id/tv_created_at"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      android:textAppearance="@style/TextAppearance.AppCompat.Caption"
      android:textStyle="bold"
      android:transitionName="date"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/photo_story"
      tools:text="@string/date" />

  <TextView
      android:id="@+id/tv_title_desc"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      android:text="@string/description"
      android:textAppearance="@style/TextAppearance.AppCompat.Title"
      android:transitionName="description"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/tv_name" />

  <TextView
      android:id="@+id/tv_desc_story"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="8dp"
      android:textAppearance="@style/TextAppearance.AppCompat.Caption"
      android:textStyle="bold"
      android:transitionName="description"
      app:layout_constraintStart_toStartOf="@+id/tv_title_desc"
      app:layout_constraintTop_toBottomOf="@+id/tv_title_desc"
      tools:text="@string/message_welcome_page"/>

  </androidx.constraintlayout.widget.ConstraintLayout>