<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        tools:context=".ui.AddNewStoryFragment">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/previewImageView"
            android:layout_width="0dp"
            android:layout_height="250dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/btn_gallery"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/baseline_image_24" />


        <Button
            style="?attr/materialButtonOutlinedStyle"
            android:id="@+id/btn_gallery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gallery"
            app:layout_constraintBottom_toTopOf="@+id/outlined_desc"
            app:layout_constraintEnd_toStartOf="@+id/btn_camera"
            app:layout_constraintHorizontal_bias="0.406"
            app:layout_constraintStart_toStartOf="@+id/outlined_desc"
            android:textColor="@color/bluesky"
            app:strokeColor="@color/bluesky" />

        <Button
            android:id="@+id/btn_camera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/camera"
            app:layout_constraintBottom_toBottomOf="@+id/btn_gallery"
            app:layout_constraintEnd_toEndOf="@+id/outlined_desc"
            app:layout_constraintHorizontal_bias="0.794"
            app:layout_constraintStart_toStartOf="@+id/outlined_desc"
            app:layout_constraintTop_toTopOf="@+id/btn_gallery"
            android:textColor="@color/white"
            android:backgroundTint="@color/bluesky"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/outlined_desc"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginBottom="8dp"
            app:boxStrokeColor="@color/bluesky"
            app:layout_constraintBottom_toTopOf="@+id/btn_upload">

            <com.dicoding.picodiploma.loginwithanimation.view.camera.DescriptionEditText
                android:id="@+id/edt_desc"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/description"
                android:inputType="textMultiLine" />
        </com.google.android.material.textfield.TextInputLayout>

        <ProgressBar
            android:id="@+id/pb_add_story"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.dicoding.picodiploma.loginwithanimation.view.camera.UploadButton
            android:id="@+id/btn_upload"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/upload"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:textColor="@color/white"
            android:backgroundTint="@color/bluesky"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
